[project]
name = "wordtools"
version = "0.1.0"
description = "A variety of tools for solving word puzzles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.6",
    "requests>=2.32.3",
    "typer>=0.15.2",
    "unidecode>=1.3.8",
]

[project.scripts]
wordtools = "wordtools.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
    "types-requests>=2.32.0.20250306",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
packages = ["wordtools"]
